- feat: ajuste sinalizados pelo Sonar